--- a/install.html
+++ b/install.html
@@ -1,4 +1,4 @@
-<a href="https://slack.com/oauth/v2/authorize?scope=commands%2Cteam%3Aread&amp;user_scope=&amp;redirect_uri=https%3A%2F%2F334b-198-98-124-169.ngrok.io%2Fslack&amp;client_id=660262893668.4018059038016"
+<a href="https://slack.com/oauth/v2/authorize?scope=commands%2Cteam%3Aread&amp;user_scope=&amp;redirect_uri=https%3A%2F%2Fspongebob-text-slack-app.onrender.com%2Fslack&amp;client_id=660262893668.4018059038016"
     style="align-items:center;color:#000;background-color:#fff;border:1px solid #ddd;border-radius:48px;display:inline-flex;font-family:Lato, sans-serif;font-size:16px;font-weight:600;height:48px;justify-content:center;text-decoration:none;width:236px"><svg
         xmlns="http://www.w3.org/2000/svg" style="height:20px;width:20px;margin-right:12px" viewBox="0 0 122.8 122.8">
         <path
